# switch-tools

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: blz.c  build_pfs0.c  build_romfs.c  elf2kip.c  elf2nro.c  elf2nso.c  filepath.h  nacptool.c  npdmtool.c  nxlink.c  romfs.c  romfs.h
